--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -1,11 +1,30 @@
 .HomeScreen__root {
-  background: linear-gradient(#7bbeb4, #ffffff);
-  padding: 0 24px;
-  height: 100vh;
-  overflow: scroll;
+  background: #f3f4f4;
+  // background: linear-gradient(#7bbeb4, #ffffff);
+  // padding: 0 24px;
+  min-height: 100vh;
+  // overflow: scroll;
+  .top-s {
+    height: 450px;
+    // .item {
+    //   background: url('https://s1.ax1x.com/2021/12/10/o5ouWR.png') no-repeat center 32%,
+    //     url('https://s1.ax1x.com/2021/12/10/o5hkUs.png') no-repeat center top;
+    //   background-size: cover, cover;
+    // }
+    .item {
+      background: url('https://s1.ax1x.com/2021/12/10/o5hkUs.png') no-repeat center top;
+      background-size: cover;
+      box-shadow: 0px -30px 20px #f3f4f4 inset;
+    }
+  }
   .home-header {
-    padding: 12px 0px 158px;
+    position: fixed;
+    top: 24px;
+    right: 0;
+    left: 0;
+    margin: 0 24px;
     display: flex;
+    z-index: 99;
     .now-place {
       display: flex;
       align-items: center;
@@ -27,7 +46,7 @@
       align-items: center;
       padding: 16px 25px;
       opacity: 0.65;
-      background: #c1ece9;
+      background: rgba(193, 236, 233, 0.5);
       border-radius: 50px;
       // box-shadow: 7px 7px 29px 1px rgba(218, 218, 218, 0.39);
       .search {
@@ -35,10 +54,16 @@
         height: 28px;
         padding-right: 18px;
       }
+      Input {
+        .input-placeholder {
+          color: #f4fffe;
+        }
+      }
     }
   }
   .home-body {
-    .route {
+    margin: 0 24px;
+    .s-s .route {
       font-size: 28px;
       line-height: 42px;
       color: #dbfffc;
@@ -46,7 +71,6 @@
     }
     .swiper {
       display: flex;
-      height: 359px;
       padding: 18px;
       background: #fff;
       border-radius: 18px;
@@ -64,11 +88,14 @@
         font-weight: bold;
       }
       .swiper-left {
-        background: #9ef0ea;
+        // background: #9ef0ea;
         border-radius: 18px;
-        padding: 34px 20px;
+        // padding: 34px 20px;
         margin-right: 8px;
-
+        .first {
+          width: 278px;
+          height: 322px;
+        }
         .select-route {
           .season {
             width: 81px;
@@ -89,10 +116,14 @@
         display: flex;
         flex-direction: column;
         .right-top {
+          .second {
+            width: 380px;
+            height: 140px;
+          }
           box-sizing: border-box;
-          background: #81dbeb;
+          // background: #81dbeb;
           border-radius: 18px;
-          padding: 34px 20px;
+          // padding: 34px 20px;
           margin-bottom: 8px;
           .now {
             width: 81px;
@@ -108,11 +139,15 @@
           }
         }
         .right-bottom {
+          .third {
+            width: 380px;
+            height: 160px;
+          }
           flex: 1;
           box-sizing: border-box;
-          background: #81ebad;
+          // background: #81ebad;
           border-radius: 18px;
-          padding: 34px 20px;
+          // padding: 34px 20px;
           .local {
             width: 81px;
             height: 42px;
@@ -130,6 +165,7 @@
     }
   }
   .home-order {
+    margin: 0 24px;
     padding: 22px 33px;
     background: #fff;
     border-radius: 18px;
@@ -152,13 +188,14 @@
     }
   }
   .product-list {
-    margin-top: 24px;
+    margin: 24px;
+    // margin-top: 24px;
     .item {
       width: 48.5%;
       margin-bottom: 24px;
       .card {
         background: #fff;
-        border-radius: 20px;
+        border-radius: 14px;
         overflow: hidden;
         .big-img {
           position: relative;
@@ -192,6 +229,7 @@
         .big {
           width: 100%;
           height: 415px;
+          border-radius: 14px 14px 0px 0px;
         }
         .content {
           padding: 17px;
@@ -208,7 +246,7 @@
           .consume {
             display: flex;
             justify-content: space-between;
-            font-size: 16px;
+            font-size: 22px;
             line-height: 34px;
             color: #ababab;
             padding: 30px 0 14px;
