--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -15,14 +15,25 @@
       background: url('https://s1.ax1x.com/2021/12/10/o5hkUs.png') no-repeat center top;
       background-size: cover;
       box-shadow: 0px -30px 20px #f3f4f4 inset;
+      display: flex;
+      flex-direction: column-reverse;
+      View {
+        margin-left: 24px;
+        margin-bottom: 80px;
+        color: #dbfffc;
+        font-size: 28px;
+        font-weight: bold;
+        line-height: 42px;
+        letter-spacing: 3px;
+      }
     }
   }
   .home-header {
     position: fixed;
-    top: 24px;
+    top: 0;
     right: 0;
     left: 0;
-    margin: 0 24px;
+    padding: 24px;
     display: flex;
     z-index: 99;
     .now-place {
@@ -277,4 +288,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+.basic-swiped {
+  position: absolute;
+  left: 80px;
+  bottom: 50px;
+}
+.taroify-swiper__indicator--active {
+  background: #64d0c8;
+  width: 30px;
+  border-radius: 10px;
 }
