--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -12,46 +12,50 @@
         margin-right: 30px;
       }
       .img2 {
-        width: 34px;
-        height: 32px;
-        margin-right: 26px;
+        width: 32px;
+        height: 36px;
+        margin-right: 22px;
       }
       .img3 {
-        width: 36px;
-        height: 32px;
+        width: 32px;
+        height: 36px;
       }
     }
   }
   .user {
     display: flex;
+    align-items: center;
     .User__Img {
-      width: 142px;
-      height: 142px;
-      padding: 10px;
+      width: 130px;
+      height: 130px;
       border-radius: 50%;
       .img {
-        width: 142px;
-        height: 142px;
+        width: 100%;
+        height: 100%;
       }
     }
     .User__Name {
-      padding-left: 2px;
+      padding-left: 6px;
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      align-items: flex-start;
       .name {
-        font-size: 34px;
-        font-weight: bold;
+        font-size: 36px;
+        font-weight: 600;
+        color: #333;
+        line-height: 50px;
       }
       .autograph {
-        font-size: 26px;
-        color: #a8a8a8;
+        padding-top: 8px;
+        font-size: 24px;
+        font-weight: 400;
+        color: #999;
+        line-height: 34px;
       }
     }
   }
   .dolor {
-    margin: 30px 0;
+    margin-top: 30px;
     position: relative;
     background: #4dcfc5;
     border-radius: 14px;
@@ -82,7 +86,7 @@
   }
   .card {
     display: flex;
-    margin: 30px 0;
+    margin-top: 24px;
     .Card__Left {
       margin-right: 18px;
     }
@@ -93,7 +97,6 @@
       align-items: center;
       flex: 1;
       background: linear-gradient(180deg, #f0fffe, #ffffff 37%, #feffff 99%, #ffffff);
-
       border-radius: 14px;
       .img {
         width: 50px;
