--- a/src/pages/setPic/index.less
+++ b/src/pages/setPic/index.less
@@ -2,38 +2,40 @@
   box-sizing: border-box;
   height: 100vh;
   background: #000;
-  padding: 24px;
   position: relative;
-  .name-img {
+  .box {
+    height: 24px;
+  }
+  .pic-img {
     margin-top: 24px;
-    display: flex;
-    align-items: center;
-    background: #fff;
-    border-radius: 20px;
-    .name {
-      box-sizing: border-box;
-      height: 100px;
-      padding: 0 30px;
-      border-radius: 20px;
-      font-size: 32px;
-      line-height: 44px;
-      width: 600px;
-    }
+    background: rgba(218, 218, 218, 0.39);
+    height: 590px;
     .img {
-      width: 40px;
-      height: 40px;
+      width: 100%;
+      height: 100%;
     }
   }
-  .btn {
-    // position: absolute;
-    // bottom: 80px;
-    // left: 50%;
-    // width: 80%;
-    // transform: translate(-50%);
-    // background: #4dcfc5;
-    // border-radius: 46px;
-    // height: 92px;
-    // color: #fff;
-    // font-size: 32px;
+  .btn-view {
+    margin: 502px 24px 0px;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 44px;
+    .camera {
+      width: 100%;
+      border-radius: 48px;
+      border: 2px solid #4dcfc5;
+      background: #4dcfc5;
+      color: #fff;
+      padding: 24px 0;
+    }
+    .select {
+      margin-top: 60px;
+      width: 100%;
+      border-radius: 48px;
+      border: 2px solid #4dcfc5;
+      color: #4dcfc5;
+      padding: 24px 0;
+      background: #000;
+    }
   }
 }
