--- a/src/pages/usualMessage/index.less
+++ b/src/pages/usualMessage/index.less
@@ -1,6 +1,6 @@
 .UsualMessagePage__root {
   box-sizing: border-box;
-  // height: 100vh;
+  min-height: 100vh;
   background: #f3f4f4;
   border-radius: 20px 20px 0 0;
   padding: 24px;
@@ -36,61 +36,67 @@
       margin-right: 15px;
     }
   }
-  .list {
-    .item {
-      margin: 21px 0px;
-      background: #fff;
-      border-radius: 14px;
-      .card {
-        padding: 30px 24px 30px 26px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        .left-all {
-          flex-grow: 1;
-          padding-right: 20px;
-          .left-top {
+  .item {
+    margin: 21px 0px;
+    background: #fff;
+    border-radius: 14px;
+    .card {
+      padding: 30px 24px 30px 26px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .left-all {
+        flex-grow: 1;
+        padding-right: 20px;
+        .left-top {
+          display: flex;
+          justify-content: space-between;
+          .user-name {
             display: flex;
-            justify-content: space-between;
-            .user-name {
-              display: flex;
-              font-size: 28px;
-              font-weight: bold;
-              .myself {
-                font-size: 24px;
-                background: rgba(237, 255, 254, 0.96);
-                border-radius: 16px;
-                font-size: 24px;
-                padding: 4px 16px;
-                color: #20d3c8;
-                margin-left: 13px;
-              }
-              .default {
-                font-size: 24px;
-                background: #f3f4f4;
-                border-radius: 16px;
-                font-size: 24px;
-                padding: 4px 16px;
-                color: #a8a8a8;
-                margin-left: 7px;
-              }
-            }
-            .tel {
-              font-size: 28px;
-              font-weight: bold;
-            }
-          }
-          .left-id {
-            font-size: 20px;
+            font-size: 28px;
             font-weight: bold;
-            color: #a8a8a8;
-            padding-top: 22px;
+            .myself {
+              font-size: 24px;
+              background: rgba(237, 255, 254, 0.96);
+              border-radius: 16px;
+              font-size: 24px;
+              padding: 4px 16px;
+              color: #20d3c8;
+              margin-left: 13px;
+            }
+            .order-p {
+              font-size: 24px;
+              border-radius: 16px;
+              font-size: 24px;
+              padding: 4px 16px;
+              margin-left: 13px;
+              color: #20d3c8;
+            }
+            .default {
+              font-size: 24px;
+              background: #f3f4f4;
+              border-radius: 16px;
+              font-size: 24px;
+              padding: 4px 16px;
+              color: #a8a8a8;
+              margin-left: 7px;
+            }
+          }
+          .tel {
+            font-size: 28px;
+            font-weight: bold;
           }
         }
-        .jump {
-          width: 16px;
-          height: 30px;
+        .left-id {
+          font-size: 20px;
+          font-weight: bold;
+          color: #a8a8a8;
+          padding-top: 22px;
         }
+      }
+      .jump {
+        width: 16px;
+        height: 30px;
       }
     }
   }
