--- a/src/pages/myorder/index.less
+++ b/src/pages/myorder/index.less
@@ -1,7 +1,7 @@
 .MyOrderPage__root {
   // border-radius: 25px 25px 0 0;
-  // background: #f1f2f2;
-  // height: 100%;
+  background: #f1f2f2;
+  min-height: 100vh;
   .orderTabs {
     background: #f1f2f2;
   }
