--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -1,7 +1,7 @@
 .MineScreen__root {
   background: #f4f4f4;
   min-height: 100vh;
-  padding: 0 30px;
+  padding: 0 30px 180px;
   .index {
     display: flex;
     align-items: center;
