--- a/src/components/GoodsItem/index.less
+++ b/src/components/GoodsItem/index.less
@@ -21,7 +21,7 @@
         // line-height: 42px;
         .label-pic {
           margin: 6px 8px 5px 6px;
-          width: 76px;
+          min-width: 76px;
           height: 34px;
           background: url('../../assets/img/home/black.png') no-repeat;
           background-size: 100% 100%;
