--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -21,6 +21,9 @@
       }
     }
   }
+  .banner {
+    box-shadow: 3px -8px 72px 20px #47a1a1 inset;
+  }
   .un-done {
     position: absolute;
     width: 100%;
@@ -67,7 +70,7 @@
       align-items: center;
       padding: 16px 25px;
       opacity: 0.65;
-      background: rgba(193, 236, 233, 0.5);
+      background: rgba(230, 230, 230, 0.9);
       border-radius: 50px;
       // box-shadow: 7px 7px 29px 1px rgba(218, 218, 218, 0.39);
       .search {
