--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -86,6 +86,7 @@
     }
   }
   .go-done {
+    // color: rgb(77, 207, 197);
     // position: absolute;
     // top: 300px;
     // background: #f3f4f4;
