--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -4,7 +4,7 @@
   max-height: 100vh;
   padding-top: 296px;
   box-sizing: border-box;
-  .bg{
+  .bg {
     position: fixed;
     top: 0;
     left: 0;
@@ -51,6 +51,36 @@
       font-size: 32px;
       font-weight: 400;
       line-height: 44px;
+    }
+  }
+  .protocol {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    // align-items: center;
+    padding: 136px 100px 0;
+    .check {
+      padding-top: 6px;
+      .img {
+        width: 28px;
+        height: 28px;
+      }
+    }
+    .protocolName {
+      margin-left: 10px;
+      .txt {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        font-size: 24px;
+        font-weight: 400;
+        color: #a2a2a2;
+        line-height: 34px;
+      }
+      .highlight {
+        margin-left: 6px;
+        color: #4dcfc5;
+      }
     }
   }
   .toast {
